# zmt-bot

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_dependencies_armv7  README.md  armv7.Dockerfile  bot_utils.py  client.py  config.py  data_report.csv  dataclass_utils.py  dataset.py  dependencies.armv7.to.armv7.Dockerfile  dependencies.x86_64.to.armv7.Dockerfile  dissimilar_model.py  docker-bake.hcl  download_snippets.py  essentia-tensorflow.Dockerfile  estimator_config.py  max_score.py  model_param_report.txt  models.py  music_config.yaml  prepare_data.py  pyproject.toml  train.py  utils.py
audio/: features.py  model_utils.py  models.py
dataset/: persistent_dataset_processor.py
essentia/: bazel.patch  download_models.py  essentia-tensorflow.Dockerfile
essentia/models/: README.md
genre/: create_genre_clusterization.py  create_genre_mapping.py  download_genre_snippets.py  filter_outliers.py  genre_dataset.py  manually_upload_data.md  prepare_features_dataset.py  prepare_genre_dataset.py  spotify.py  train_guess_genre_model.py
genre/csv/: README.md
model_reports/: gmeans.csv
