[tool.poetry]
name = "tg-zmt-bot"
version = "0.1.3+traindebug"
description = ""
authors = ["Dmitriy Zharikhin <jorixxx@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
requests = "^2.32.3"
requests-ratelimiter = "^0.7.0"
pandas = "^2.2.3"
path-dict = "^4.0.0"
numba = "^0.61.0"
librosa = "^0.11.0"
soundfile = "^0.13.1"
atomics = "^1.0.2"
scikit-learn = "^1.6.1"
dacite = "^1.9.2"
telethon = "^1.40.0"
mutagen = "^1.47.0"
linearboost = "^0.1.2"
persist-queue = "^1.0.0"
standard-aifc = "^3.13.0"
audioread = "^3.0.1"
standard-sunau = "^3.13.0"
poetry-core = "^2.1.2"
polars = "^1.30.0"
pyquery = "^2.0.1"
pyarrow = "^20.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
