[tool.poetry]
name = "tg-zmt-bot"
version = "0.2.9"
description = ""
authors = ["Dmitriy Zharikhin <jorixxx@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
requests = "^2.32.3"
requests-ratelimiter = "^0.7.0"
pandas = "^2.2.3"
path-dict = "^4.0.0"
numba = "^0.62.0"
soundfile = "^0.13.1"
atomics = "^1.0.2"
scikit-learn = "^1.6.1"
dacite = "^1.9.2"
telethon = "^1.42.0"
mutagen = "^1.47.0"
linearboost = "^0.1.2"
persist-queue = "^1.0.0"
standard-aifc = "^3.13.0"
audioread = "^3.0.1"
standard-sunau = "^3.13.0"
poetry-core = "^2.1.2"
polars = "^1.30.0"
pyquery = "^2.0.1"
pyarrow = "^22.0.0"
aiohttp = "^3.12.11"
aiohttp-cors = "^0.8.1"
pyod = "^2.0.5"
essentia = {path = "essentia/essentia-2.1b6.dev0-cp312-cp312-manylinux_2_35_x86_64.whl", develop = true}
combo = "^0.1.3"
suod = "^0.1.4"
clustpy = {git = "https://github.com/collinleiber/ClustPy.git"}
scikit-optimize = "^0.10.2"
torch = {version = "^2.9.0", source = "pytorch_cpu"}
torchvision = "^0.24.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
